--- a/src/patternfly/components/Switch/switch.scss
+++ b/src/patternfly/components/Switch/switch.scss
@@ -88,7 +88,11 @@
       background-color: var(--#{$switch}__input--checked__toggle--BackgroundColor);
 
       &::before {
-        transform: translateX(calc(var(--#{$switch}__input--checked__toggle--before--TranslateX) * var(--#{$pf-global}--rtl--transform--flip)));
+        @include pf-v5-bidirectional-style(
+          $prop: transform,
+          $ltr-val: translateX(var(--#{$switch}__input--checked__toggle--before--TranslateX)),
+          $rtl-val: translateX(#{pf-v5-calc-inverse(var(--#{$switch}__input--checked__toggle--before--TranslateX))})
+        );
       }
     }
 
