fix(breadcrumb): added rtl support

--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -58,6 +58,8 @@
 
 // Breadcrumb divider
 .#{$breadcrumb}__item-divider {
+  @include pf-v5-mirror-inline-on-rtl;
+
   margin-inline-end: var(--#{$breadcrumb}__item-divider--MarginRight);
   font-size: var(--#{$breadcrumb}__item-divider--FontSize);
   line-height: 1;
