--- a/src/patternfly/base/tokens/_tokens-font.scss
+++ b/src/patternfly/base/tokens/_tokens-font.scss
@@ -49,8 +49,19 @@
   // text-decoration
   --pf-t--global--text-decoration--100: none;
   --pf-t--global--text-decoration--200: underline;
-  --pf--global--link--text-decoration: var(--pf--global--text-decoration--200);
-  --pf--global--link--text-decoration--hover: var(--pf--global--text-decoration--200);
+  --pf-t--global--link--text-decoration: var(--pf-t--global--text-decoration--200);
+  --pf-t--global--link--text-decoration--hover: var(--pf-t--global--text-decoration--200);
+
+  // blend modes 
+  --pf-t--global--mix-blend-mode--100: multiply;
+
+  // --pf-t--global--mix-blend-mode--100: screen; For dark mode, use screen
+  --pf-t--global--background--color--action--plain--hover--blend: var(--pf-t--global--mix-blend-mode--100);
+
+  // semantic border width
+  --pf-t--global--border--width--control--default: var(--pf-t--global--border--width--100);
+  --pf-t--global--border--width--control--hover: var(--pf-t--global--border--width--100);
+  --pf-t--global--border--width--control--active: var(--pf-t--global--border--width--200);
 }
 
 //  stylelint-enable custom-property-pattern
