--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -143,12 +143,12 @@
   --#{$button}--m-plain--active--Color: var(--#{$pf-global}--Color--100);
   --#{$button}--m-plain--disabled--Color: var(--#{$pf-global}--disabled-color--200);
   --#{$button}--m-plain--disabled--BackgroundColor: transparent;
-  --#{$button}--m-plain--m-inline--FontSize: inherit;
-  --#{$button}--m-plain--m-inline--PaddingTop: 0;
-  --#{$button}--m-plain--m-inline--PaddingRight: var(--#{$pf-global}--spacer--sm);;
-  --#{$button}--m-plain--m-inline--PaddingBottom: 0;
-  --#{$button}--m-plain--m-inline--PaddingLeft: var(--#{$pf-global}--spacer--sm);;
-  --#{$button}--m-plain--m-inline--LineHeight: normal;
+
+    // Plain compact button
+    --#{$button}--m-plain--m-compact--PaddingTop: 0;
+    --#{$button}--m-plain--m-compact--PaddingRight: 0;
+    --#{$button}--m-plain--m-compact--PaddingBottom: 0;
+    --#{$button}--m-plain--m-compact--PaddingLeft: 0;
 
   // Control Button
   --#{$button}--m-control--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
@@ -565,13 +565,13 @@
     color: var(--#{$button}--m-plain--Color);
     background-color: var(--#{$button}--m-plain--BackgroundColor);
 
-    &.pf-m-inline {
-      padding-block-start: var(--#{$button}--m-plain--m-inline--PaddingTop);
-      padding-block-end: var(--#{$button}--m-plain--m-inline--PaddingBottom);
-      padding-inline-start: var(--#{$button}--m-plain--m-inline--PaddingLeft);
-      padding-inline-end: var(--#{$button}--m-plain--m-inline--PaddingRight);
-      font-size: var(--#{$button}--m-plain--m-inline--FontSize);
-      line-height: var(--#{$button}--m-plain--m-inline--LineHeight);
+    &.pf-m-compact {
+      --#{$button}--PaddingTop: var(--#{$button}--m-plain--m-compact--PaddingTop);
+      --#{$button}--PaddingRight: var(--#{$button}--m-plain--m-compact--PaddingRight);
+      --#{$button}--PaddingBottom: var(--#{$button}--m-plain--m-compact--PaddingBottom);
+      --#{$button}--PaddingLeft: var(--#{$button}--m-plain--m-compact--PaddingLeft);
+  
+      line-height: 1;
     }
 
     &:hover {
