fix(rtl): fixes icon and truncate rtl

--- a/src/patternfly/components/Avatar/avatar.hbs
+++ b/src/patternfly/components/Avatar/avatar.hbs
@@ -6,7 +6,7 @@
   src="
     {{~#if avatar--Src}}{{avatar--Src}}
     {{~else if avatar--IsDark}}/assets/images/img_avatar-dark.svg
-    {{~else}}/assets/images/img_avatar-light.svg{{/if}}"
+    {{~else}}/assets/images/pf-c-brand__logo-base.jpg{{/if}}"
   {{#if avatar--attribute}}
     {{{avatar--attribute}}}
   {{/if}}>
