--- a/src/patternfly/components/Icon/icon.scss
+++ b/src/patternfly/components/Icon/icon.scss
@@ -42,6 +42,12 @@
   width: var(--#{$icon}--Width);
   height: var(--#{$icon}--Height);
 
+  @include pf-v5-mirror-inline-on-rtl;
+
+  &.pf-m-dir-ltr {
+    direction: ltr;
+  }
+
   // Inline modifier
   &.pf-m-inline {
     --#{$icon}--Width: var(--#{$icon}--m-inline--Width);
