fix(rtl): moved file ext to dedicated element

--- a/src/patternfly/components/Truncate/truncate-end.hbs
+++ b/src/patternfly/components/Truncate/truncate-end.hbs
@@ -12,4 +12,7 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{/if}}
+  {{#if truncate-file-extension--text}}
+    {{> truncate-file-extension}}
+  {{/if}}
 </span>
