--- a/src/patternfly/components/Truncate/truncate-start.hbs
+++ b/src/patternfly/components/Truncate/truncate-start.hbs
@@ -8,4 +8,7 @@
   {{#if @partial-block}}
     {{> @partial-block}}
   {{/if}}
+  {{#if truncate-file-extension--text}}
+    {{> truncate-file-extension}}
+  {{/if}}
 </span>
