chore(Card,Tile): apply RTL fixes

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -369,6 +369,8 @@
 }
 
 .#{$card}__header-toggle-icon {
+  @include pf-v5-mirror-inline-on-rtl;
+
   display: inline-block;
   transition: var(--#{$card}__header-toggle-icon--Transition);
 }
