--- a/src/patternfly/components/Truncate/truncate.scss
+++ b/src/patternfly/components/Truncate/truncate.scss
@@ -25,8 +25,8 @@
 .#{$truncate}__end {
   @include pf-v5-bidirectional-style (
     $prop: direction,
-    $ltr-value: rtl,
-    $rtl-value: ltr
+    $ltr-val: rtl,
+    $rtl-val: ltr
   )
 }
 
@@ -35,8 +35,8 @@
 
   @include pf-v5-bidirectional-style (
     $prop: direction,
-    $ltr-value: ltr,
-    $rtl-value: rtl
+    $ltr-val: ltr,
+    $rtl-val: rtl
   )
 }
 
@@ -45,8 +45,8 @@
   .#{$truncate}__end {
     @include pf-v5-bidirectional-style (
       $prop: direction,
-      $ltr-value: ltr,
-      $rtl-value: rtl
+      $ltr-val: ltr,
+      $rtl-val: rtl
     )
   }
 }
