fix(skeleton): added rtl styles

--- a/src/patternfly/demos/Skeleton/card-skeleton.hbs
+++ b/src/patternfly/demos/Skeleton/card-skeleton.hbs
@@ -12,11 +12,7 @@
       {{/l-flex}}
   {{/card-body}}
   {{#> card-body}}
-    {{#> skeleton}}
-      {{#> bullseye}}
-        {{#> skeleton skeleton--modifier="pf-m-circle pf-m-width-md"}}
-        {{/skeleton}}
-      {{/bullseye}}
+    {{#> skeleton skeleton--modifier="pf-m-square pf-m-width-md"}}
     {{/skeleton}}
   {{/card-body}}
   {{#> card-body}}
